charts/all/sm-data-plane/templates/backend-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: backend
  namespace: data-plane
spec:
  selector:
    matchLabels:
      app: backend
  mtls:
    mode: PERMISSIVE #UNSET, DISABLE, PERMISSIVE, STRICT
