charts/all/sm-data-plane/templates/frontend-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend
  namespace: data-plane
spec:
  selector:
    matchLabels:
      app: frontend
  mtls:
    mode: PERMISSIVE #UNSET, DISABLE, PERMISSIVE, STRICT
