charts/all/sm-data-plane/templates/backend-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend
  namespace: data-plane
spec:
  hosts:
  - '*.local'
  http:
  - route:
    - destination:
        host: backend.data-plane.svc.cluster.local
