charts/all/sm-data-plane/templates/frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: data-plane
spec:
  hosts:
  - '*.local'
  gateways:
  - istio-system/frontend-gateway
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: frontend.data-plane.svc.cluster.local
